# adventofcode

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  adventofcode.cpp
day1/: CMakeLists.txt  README.md  fuzz.cpp  solution.hpp  task-description.md  test-data  test.cpp
day2/: CMakeLists.txt  README.md  fuzz.cpp  solution.hpp  task-description.md  test.cpp
day3/: CMakeLists.txt  README.md  fuzz.cpp  solution.hpp  test.cpp
day4/: CMakeLists.txt  README.md  fuzz.cpp  solution.hpp  test.cpp
day5/: CMakeLists.txt  fuzz.cpp  solution.hpp  test.cpp
helper/: fuzz.hpp  solution.hpp  test.hpp
helpers/: solve_macro.hpp
mk/: Boost.cmake  CompilerFlags.cmake  add_test.cmake  test.cmake
